# bimmer_connected

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  basic_canada.py  basic_germany.py  bimmerconnected  cli.py  demo.py  generate_vehicle_fingerprint.py  pylintrc  pyproject.toml  readthedocs.yml  release.sh  remote_light_flash.py  remote_services.py  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  status.py  tox.ini  travis.yml
.github/: PULL_REQUEST_TEMPLATE.md  lock.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  config.yml  feature_request.md  issue-template.md
.github/workflows/: codeql-analysis.yml  lock.yml  pythonpublish.yml  stale.yml  test.yml
bimmer_connected/: RemoteServices.py  __init__.py  _version.py  account.py  all_trips.py  charging_profile.py  cli.py  const.py  coord_convert.py  country_selector.py  coverage.xml  efficiency.py  exceptions.py  last_destinations.py  last_trip.py  models.py  navigation.py  range_maps.py  remote_services.py  state.py  utils.py  vehicle.py  vehicle_status.py  version.py
bimmer_connected/api/: __init__.py  authentication.py  client.py  regions.py  utils.py
bimmer_connected/tests/: __init__.py  common.py  conftest.py  test_account.py  test_api.py  test_cli.py  test_deprecated_vehicle_status.py  test_remote_services.py  test_utils.py  test_vehicle.py  test_vehicle_status.py
bimmer_connected/tests/responses/: mini-eadrax-vcs_v5_vehicle-list.json
bimmer_connected/vehicle/: __init__.py  charging_profile.py  charging_sessions.py  charging_statistics.py  climate.py  const.py  doors_windows.py  fuel_and_battery.py  fuel_indicators.py  location.py  models.py  position.py  remote_services.py  reports.py  tires.py  vehicle.py  vehicle_status.py
docs/: Makefile
docs/source/: captcha.rst  cli.rst  conf.py  index.rst
docs/source/_static/: captcha_north_america.html
docs/source/api/: account.rst  country_selector.rst  remove_services.rst  state.rst  vehicle.rst  vehicle_status.rst
docs/source/captcha/: north_america.rst  north_america_form.html  rest_of_world.rst  rest_of_world_form.html
docs/source/development/: fingerprints_in_homeassistant.rst  reverse_engineering_mybmw.rst
docs/source/module/: account.rst  api.rst  const.rst  models.rst  utils.rst  vehicle.rst
test/: __init__.py  conftest.py  test_account.py  test_all_trips.py  test_api.py  test_charging_profile.py  test_country_selector.py  test_deprecated_vehicle.py  test_deprecated_vehicle_status.py  test_efficiency.py  test_last_destinations.py  test_last_trip.py  test_navigation.py  test_parsing.py  test_range_maps.py  test_remote_services.py  test_specs.py  test_state.py  test_utils.py  test_vehicle.py  test_vehicle_status.py
test/responses/: vehicles.json
test/responses/EntryEvo/: dynamic.json
test/responses/F11/: vehicles_v2_bmw_0.json
test/responses/F15/: status.json  vehicles.json
test/responses/F16_NBTevo/: dynamic.json  specs.json
test/responses/F31/: eadrax-vcs_v4_vehicles_state_WBA00000000000F31.json  status.json  vehicles_v2_bmw_0.json
test/responses/F32_NBTevo/: dynamic.json
util/: fingerprint_v2.py
(+109 files in other folders)
