[metadata]
name = bimmer_connected
author = m1n3rva
author-email = m1n3rva@gmx.net
summary = Library to read data from the BMW Connected Drive portal
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/m1n3rva/bimmer_connected
project_urls =
    Bug Tracker =
    Documentation =
    Source Code = https://github.com/m1n3rva/bimmer_connected
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    BMW
    Connected Drive
    home automation

[files]
packages =
    bimmer_connected

[entry_points]
console_scripts =
    bimmerconnected = bimmer_connected.cli:main
