[metadata]
name = bimmer_connected
author = gerard33, rikroe
summary = Library to read data from the BMW Connected Drive portal
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
python_requires = >= 3.6
home-page = https://github.com/bimmerconnected/bimmer_connected
project_urls =
    Bug Tracker = https://github.com/bimmerconnected/bimmer_connected/issues
    Documentation = https://bimmer-connected.readthedocs.io/en/latest/
    Source Code = https://github.com/bimmerconnected/bimmer_connected
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    BMW
    Connected Drive
    home automation

[files]
packages =
    bimmer_connected

[entry_points]
console_scripts =
    bimmerconnected = bimmer_connected.cli:main
